adding updated files

--- a/References.html
+++ b/References.html
@@ -79,26 +79,22 @@
     <div class="container-fluid d-flex justify-content-center">
         <div class="row">
             <div class="col-md-12">
-                <h1>NBA 2018 Season</h1>
+                <h1>References</h1>
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
     <div class="container-fluid d-flex justify-content-center">
         <div class="row">
             <div class="col-md-12">
-                <a href="#", target="_blank"></a><img height=100% width=100%  src="NBA.png">
+                <h3>Kaggle- https://www.kaggle.com/nathanlauga/nba-games?select=games_details.csv</h3>
             </div>
+            <hr>
         </div>
     </div>
-    <div class="container-fluid d-flex justify-content-center">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Steven Green</h2>
-                <h2>Kidist Gebremedhin</h2>
-                <h2>Thi Quang</h2>
-            </div>
-        </div>
-    </div>
+    
 </body>
 
 </html>
