--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NBA</title>
+    <title>Graphs</title>
 
     <!-- Bring in our bootstrap stylesheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -69,36 +69,87 @@
                     <li class="nav-item">
                         <a class="nav-link" href="References.html">References</a>
                     </li>
-                    
-                </ul>
+                    </ul>
+                </div>
             </div>
+        </nav>
+
+        <!-- First row -->
+        <div>
+
         </div>
-    </nav>
-    <!-- <div id="bar"></div>
-    <div id="bar2"></div> -->
-    <div class="container-fluid d-flex justify-content-center">
+
+
+
+
+
+    <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h1>NBA 2018 Season</h1>
+            <div class="col-md-6">
+                <a href="#", target="_blank"></a><img height=80% width=80%  src="Asset\pug.jpeg">
+            </div>
+            <div class="col-md-6">
+                <div class="container" style="background: white;">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>Thi Quang</h1>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <p>Student- Stuggling to complete this project</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid d-flex justify-content-center">
+    <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <a href="#", target="_blank"></a><img height=100% width=100%  src="NBA.png">
+            <div class="col-md-6">
+                <a href="#", target="_blank"></a><img height=80% width=80%  src="Asset\cocker-spaniel.jpeg">
+            </div>
+            <div class="col-md-6">
+                <div class="container" style="background: white;">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>Steven Green</h1>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <p>fwhiefuhweoifhyeofghewufhueawifhueaiwhfeiwuhf</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid d-flex justify-content-center">
+    <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h2>Steven Green</h2>
-                <h2>Kidist Gebremedhin</h2>
-                <h2>Thi Quang</h2>
+            <div class="col-md-6">
+                <a href="#", target="_blank"></a><img height=80% width=80%  src="Asset\corgi.jpeg">
+            </div>
+            <div class="col-md-6">
+                <div class="container" style="background: white;">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>Kidist Gebremedhin</h1>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <p>fwhiefuhweoifhyeofghewufhueawifhueaiwhfeiwuhf</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+       
 </body>
 
 </html>
